# rfs

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config.toml  docker-compose.yml  flake.nix  lib.rs
.github/workflows/: release.yaml  testandbuild.yaml  tests.yaml
docker2fl/: Cargo.toml  README.md
docker2fl/src/: docker2fl.rs  main.rs
docs/: README.md  user_guide.md  zdb_flists.md
docs/architecture/: components.md  data-flow.md  overview.md  storage-backends.md
docs/concepts/: caching.md  flists.md  sharding.md  stores.md
docs/tutorials/: creating-flists.md  docker-conversion.md  end-to-end-docker-workflow.md  end-to-end-flist-workflow.md  getting-started.md  mounting-flists.md  server-setup.md  syncing-files.md  website-publishing.md
docs/user-guides/: fl-server.md  frontend.md  performance-tuning.md  rfs-cli.md  troubleshooting.md
fl-server/: Cargo.toml  README.md  config.toml
fl-server/flists/user1/: alpine-latest.fl  hello-world-latest.fl  keinos-sqlite3-latest.fl  redis-latest.fl
fl-server/flists/user2/: redis-latest.fl
fl-server/schema/: blocks.sql  schema.sql
fl-server/src/: auth.rs  block_handlers.rs  config.rs  db.rs  file_handlers.rs  flists_server.rs  handler.rs  handlers.rs  main.rs  response.rs  serve_flists.rs  website_handlers.rs
fl-server/src/db/: map.rs  mod.rs  sqlite.rs  storage.rs
fl-server/src/models/: block.rs  file.rs  mod.rs  user.rs
fl-server/templates/: error.html  index.html
frontend/: .env  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/public/: theme.css
frontend/src/: App.vue  client.ts  config.ts  helpers.ts  main.ts  style.css
frontend/src/components/: CreateFlist.vue  FollowUp.vue  Footer.vue  Home.vue  Login.vue  Navbar.vue  PreviewFlist.vue  UserFlist.vue  ViewFlists.vue
frontend/src/router/: index.ts  router.ts
frontend/src/types/: Flist.ts  Flists.ts  User.ts
mycofs/: Cargo.toml  README.md  build.rs
mycofs/src/: main.rs
read_time_performance/: README.md  main.go  read_time
rfs/: Cargo.toml  README.md
rfs-client/: Cargo.toml  README.md  openapi.json
rfs-client/examples/: authentication.rs  block_management.rs  file_management.rs  flist_operations.rs  wait_for_flist.rs
rfs-client/openapi/: Cargo.toml  README.md
rfs-client/openapi/.openapi-generator/: FILES
rfs-client/openapi/docs/: AuthenticationApi.md  Block.md  BlockDownloadsResponse.md  BlockInfo.md  BlockManagementApi.md  BlockUploadedResponse.md  BlocksResponse.md  DirListTemplate.md  DirLister.md  ErrorTemplate.md  File.md  FileDownloadRequest.md  FileInfo.md  FileManagementApi.md  FileUploadResponse.md  FlistBody.md  FlistManagementApi.md  FlistServingApi.md  FlistState.md  FlistStateAccepted.md  FlistStateCreated.md  FlistStateInProgress.md  FlistStateInfo.md  FlistStateResponse.md  FlistStateStarted.md  HealthResponse.md  Job.md  ListBlocksParams.md  ListBlocksResponse.md  PreviewResponse.md  ResponseError.md  ResponseErrorBadRequest.md  ResponseErrorConflict.md  ResponseErrorForbidden.md  ResponseErrorNotFound.md  ResponseErrorTemplateError.md  ResponseErrorUnauthorized.md  ResponseResult.md  ResponseResultBlockUploaded.md  ResponseResultDirTemplate.md  (+21 more)
rfs-client/openapi/src/apis/: authentication_api.rs  block_management_api.rs  configuration.rs  file_management_api.rs  flist_management_api.rs  flist_serving_api.rs  mod.rs  system_api.rs  website_serving_api.rs
rfs-client/openapi/src/models/: block.rs  block_downloads_response.rs  block_info.rs  block_uploaded_response.rs  blocks_response.rs  dir_list_template.rs  dir_lister.rs  error_template.rs  file.rs  file_download_request.rs  file_info.rs  file_upload_response.rs  flist_body.rs  flist_state.rs  flist_state_accepted.rs  flist_state_created.rs  flist_state_in_progress.rs  flist_state_info.rs  flist_state_response.rs  flist_state_started.rs  health_response.rs  job.rs  list_blocks_params.rs  list_blocks_response.rs  mod.rs  preview_response.rs  response_error.rs  response_error_bad_request.rs  response_error_conflict.rs  response_error_forbidden.rs  response_error_not_found.rs  response_error_template_error.rs  response_error_unauthorized.rs  response_result.rs  response_result_block_uploaded.rs  response_result_dir_template.rs  response_result_file_uploaded.rs  response_result_flist_created.rs  response_result_flist_state.rs  response_result_flists.rs  (+15 more)
rfs-client/src/: client.rs  error.rs  lib.rs  types.rs
rfs/docs/: user_guide.md
rfs/src/: clone.rs  config.rs  docker.rs  download.rs  exist.rs  flist_inspector.rs  lib.rs  main.rs  merge.rs  pack.rs  server_api.rs  sync.rs  tree_visitor.rs  unpack.rs  upload.rs
rfs/src/cache/: mod.rs
rfs/src/fungi/: meta.rs
rfs/src/store/: dir.rs  http.rs  mod.rs  s3store.rs  server.rs  zdb.rs
schema/: schema.capnp  schema.sql
scripts/: README.MD  README.md  deploy_garage.sh  manage_buckets.sh
src/: app.rs  clone.rs  config.rs  download.rs  flist_inspector.rs  lib.rs  main.rs  pack.rs  run.rs  schema_capnp.rs  server_api.rs  unpack.rs  upload.rs
src/cache/: mod.rs
src/fs/: dn.rs  mod.rs
src/fungi/: meta.rs  mod.rs
src/meta/: backend.rs  inode.rs  mod.rs  types.rs
src/meta2/: mod.rs
src/s3/: mod.rs
src/server/: auth.rs  block_handlers.rs  config.rs  file_handlers.rs  handlers.rs  mod.rs  response.rs  serve_flists.rs  website_handlers.rs
src/server/db/: map.rs  mod.rs  sqlite.rs
src/server/models/: block.rs  user.rs
src/store/: bs.rs  dir.rs  http.rs  mod.rs  router.rs  s3.rs  s3store.rs  zdb.rs
templates/: base.html  error.html  index.html
tests/: Makefile  README.md  alpine-latest.fl  docker_test.rs  e2e_tests.sh  e2e_tests_updated.sh  integration_test.rs  mod.rs  parallel_download_test.rs  performance_tests.sh  threefoldtech-funk-latest.flist
