[package]
name = "mycofs"
version = "0.1.0"
edition = "2021"

[build-dependencies]
git-version = "0.3.5"

[[bin]]
name = "mycofs"
path = "src/main.rs"

[dependencies]
rfs = { path = "../rfs", features = ["build-binary"] }
anyhow = "1.0.44"
log = "0.4"
nix = "0.23.0"
clap = { version = "4.2", features = ["derive"] }
simple_logger = "1.0.1"
daemonize = "0.5"
tempfile = "3.3.0"
tokio = { version = "1", features = [ "rt", "rt-multi-thread", "macros"] }

# Docker functionality dependencies
bollard = "0.15.0"
uuid = { version = "1.3.1", features = ["v4"] }
tempdir = "0.3"