[package]
name = "rfs-client"
version = "0.1.0"
edition = "2021"
description = "Client library for RFS (Remote File System) server"
license = "MIT"

[dependencies]
openapi = { path = "./openapi" }
thiserror = "1.0"
url = "2.4"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
bytes = "1.4"
futures = "0.3"
